--- a/src/Authentication/authentication.css
+++ b/src/Authentication/authentication.css
@@ -1,8 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat|Quicksand');
-
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 *{
     font-family: 'quicksand',Arial, Helvetica, sans-serif;
     box-sizing: border-box;
+}
+h1{
+    font-family: 'Lobster',Arial, Helvetica, sans-serif;
 }
 
 body{
