--- a/src/dashboard/styles/aside.css
+++ b/src/dashboard/styles/aside.css
@@ -18,7 +18,7 @@
 }
 
 aside {
-    background-color: var(--ghost-white);
+    background-color: var(--white);
     height: 100%;
     padding: 1em;
     border-radius: 1em;
