--- a/src/dashboard/styles/aside.css
+++ b/src/dashboard/styles/aside.css
@@ -35,8 +35,10 @@ aside {
 }
 
 aside .chartContainer {
-    margin-top: 0em;
-    height: 10em;
+    margin-top: -3em;
+    height: 12em;
+    top: 2em;
+    width: max-content;
 }
 
 aside .chartContainer span {
@@ -47,7 +49,7 @@ aside .chartContainer span {
     padding: 1.25em 1.7em;
     position: relative;
     float: right;
-    top: 2em;
+    top: 6em;
     margin-right: -4em;
     border-radius: .5em;
     -webkit-box-shadow: 0px 5px 9px 0px rgba(51, 38, 174, .3);
@@ -123,4 +125,11 @@ aside .header.transaction {
 
 .transactionItem .spendMoney {
     font-weight: 600;
+}
+
+@media screen and (max-width: 920px) {
+    aside .chartContainer {
+        margin-top: -2em;
+        height: 11em;
+    }
 }
